# BondFlow

./: .gitignore  README.md  alphafold3  pyproject.toml  test_bondmat_inversion.ipynb
@dataset_stat/: aa_properties.py  analyze_sequence_span.py  batch_run_stats.sh  cif_utils.py  environment.yml  geometry.py  link_rules.py  plotting.py  requirements.txt  run_stats.py  slurm-204672.out  utils.py
BondFlow/: batch_sample.sh  batch_sample_knottin.sh  sample.py  sample_knottin.py
BondFlow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
BondFlow/config/: MDM2_knottin_desgin.yaml  RosettaModel.yaml  apm.yaml  apm_com.yaml  apm_sc.yaml  base.yaml  cyclize.yaml  link.csv  links_copy.csv  model.yaml  model_mon.yaml  monomer.yaml
BondFlow/data/: SM_utlis.py  dataloader.py  dataloader_test.py  dataset.py  filter_sidechain.py  link_utils.py  utils copy.py  utils.py  utils_old.py
BondFlow/experiment/: batch_train.sh  evaluate_knottins.py  submit.sh  train.py  train_com.py
BondFlow/models/: Attention_module.py  AuxiliaryPredictor.py  Embeddings.py  Loss copy.py  Loss.py  RoseTTAFoldModel.py  Track_module copy.py  Track_module.py  __init__.py  adapter.py  allatom_wrapper.py  diffusion.py  (+5 more)
apm_model/: __init__.py  edge_feature_net.py  flow_model.py  folding_model.py  ipa_pytorch.py  node_feature_net.py  refine_model.py  side_chain_model.py  utils.py
env/: Install.sh  env.yml
multiflow_data/: all_atom.py  interpolant.py  parsers.py  protein.py  so3_utils.py  utils.py
rfdiff/: SE3_network.py  chemical.py  kinematics.py  util.py  util_module.py
tools/: eval_bonds.py
(+637 files in other folders)
